# TikTok_Pro

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
landing_page/: index.php  robots.txt  sitemap.xml.php
landing_page/assets/css/: styles.css
landing_page/assets/js/: scripts.js
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
