[package]
name = "tiktok-pro"
version = "1.0.0"
description = "TikTok Pro Desktop App"
authors = ["CRTYPUBG"]
edition = "2021"

[lib]
name = "tiktok_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
sysinfo = "0.33"
